рехаэться камера+ выдредактовано розмыр карти

--- a/Sletta_corona_Edition/Assembly-CSharp.csproj
+++ b/Sletta_corona_Edition/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Bullet.cs" />
+     <Compile Include="Assets\CameraController.cs" />
      <Compile Include="Assets\Monster.cs" />
      <Compile Include="Assets\Obstacle.cs" />
      <Compile Include="Assets\Stella_controller.cs" />
