--- a/Sletta_corona_Edition/Assembly-CSharp.csproj
+++ b/Sletta_corona_Edition/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\CameraController.cs" />
      <Compile Include="Assets\Demoboar.cs" />
      <Compile Include="Assets\Demogorgon.cs" />
+     <Compile Include="Assets\LivesBar.cs" />
      <Compile Include="Assets\Monster.cs" />
      <Compile Include="Assets\Obstacle.cs" />
      <Compile Include="Assets\Stella_controller.cs" />
