--- a/Sletta_corona_Edition/Assembly-CSharp.csproj
+++ b/Sletta_corona_Edition/Assembly-CSharp.csproj
@@ -59,8 +59,11 @@
      <Compile Include="Assets\Demoboar.cs" />
      <Compile Include="Assets\Demogorgon.cs" />
      <Compile Include="Assets\HeartPlus.cs" />
+     <Compile Include="Assets\LevelController.cs" />
      <Compile Include="Assets\LivesBar.cs" />
+     <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\Monster.cs" />
+     <Compile Include="Assets\NextLevel.cs" />
      <Compile Include="Assets\Obstacle.cs" />
      <Compile Include="Assets\STARS.cs" />
      <Compile Include="Assets\Stella_controller.cs" />
