Пауза повністю готовва
пауза готова

--- a/Sletta_corona_Edition/Assembly-CSharp.csproj
+++ b/Sletta_corona_Edition/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Monster.cs" />
      <Compile Include="Assets\NextLevel.cs" />
      <Compile Include="Assets\Obstacle.cs" />
+     <Compile Include="Assets\PauseMenu.cs" />
      <Compile Include="Assets\STARS.cs" />
      <Compile Include="Assets\Stella_controller.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
