--- a/Sletta_corona_Edition/Assembly-CSharp.csproj
+++ b/Sletta_corona_Edition/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\NextLevel.cs" />
      <Compile Include="Assets\Obstacle.cs" />
      <Compile Include="Assets\PauseMenu.cs" />
+     <Compile Include="Assets\SoundManager.cs" />
      <Compile Include="Assets\STARS.cs" />
      <Compile Include="Assets\Stella_controller.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
